<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/itemPaddingVertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_insert_record"
        android:text="@string/tv_dialog_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:id="@+id/et_record_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/dialog_record_hint"
        app:layout_constraintTop_toBottomOf="@+id/tv_insert_record"
        tools:ignore="MissingConstraints"/>
    <Button
        android:id="@+id/btn_insert_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_insert_record"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_record_input"/>

</androidx.constraintlayout.widget.ConstraintLayout>