<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_bottom_large"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingVertical="@dimen/itemPaddingVertical"
    android:paddingHorizontal="@dimen/itemPaddingHorizontal">

    <TextView
        android:id="@+id/tv_ranking_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_ranking_item_title"
        android:textSize="@dimen/font_title"
        tools:ignore="MissingConstraints,SpUsage" />

    <TextView
        android:id="@+id/tv_ranking_item_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_ranking_record"
        android:textSize="@dimen/font_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_ranking_item_title"
        tools:ignore="MissingConstraints,SpUsage" />

    <TextView
        android:id="@+id/tv_ranking_grade"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:text="@string/sample_ranking_grade"
        android:textSize="@dimen/font_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints,SpUsage" />





</androidx.constraintlayout.widget.ConstraintLayout>