<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    tools:context=".view.fragment.mypage.MyPageFragment">

    <TextView
        android:id="@+id/tv_dashboard_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mypage_dashboard_title"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf ="parent"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/tv_lb_kg_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/mypage_lb_kg_title"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/tv_dashboard_title"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_mypage_lb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/lb_lb"
        app:layout_constraintTop_toBottomOf="@id/tv_lb_kg_title"
        app:layout_constraintWidth_percent="0.45"
        app:layout_constraintHorizontal_bias="0.45"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_mypage_lb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_kg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="@dimen/margin_start_small"
        android:text="@string/lb_lb"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/til_mypage_lb"
        app:layout_constraintBaseline_toBaselineOf="@+id/til_mypage_lb"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_mypage_kg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/lb_kg"
        android:layout_marginTop="@dimen/margin_start_small"
        app:layout_constraintTop_toBottomOf="@id/til_mypage_lb"
        app:layout_constraintWidth_percent="0.45"
        app:layout_constraintHorizontal_bias="0.45"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_mypage_kg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_lb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="@dimen/margin_start_small"
        android:text="@string/lb_kg"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/til_mypage_kg"
        app:layout_constraintBaseline_toBaselineOf="@+id/til_mypage_kg"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_change_code_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/mypage_change_code_title"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/til_mypage_kg"
        tools:ignore="MissingConstraints"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_change_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/lb_user"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_change_code_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_change_user">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_mypage_user_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btn_change_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_change_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_change_user"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_change_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/lb_code"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/et_change_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_change_code">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_mypage_code_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btn_change_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_change_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_change_box"/>

    <TextView
        android:id="@+id/tv_my_rank_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/mypage_my_rank_title"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/et_change_box"
        tools:ignore="MissingConstraints" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_mypage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_my_rank_title"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_wod"/>

</androidx.constraintlayout.widget.ConstraintLayout>