<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/itemPaddingVertical"
    android:paddingHorizontal="@dimen/itemPaddingHorizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_wod_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_title"
        android:text="@string/sample_wod_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage" />
    <Button
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:id="@+id/btn_enroll_record"
        android:layout_marginTop="@dimen/item_item_margin_top_large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_record"
        app:layout_constraintTop_toBottomOf="@+id/tv_wod_title"
        tools:ignore="MissingConstraints"
        tools:visibility="invisible" />
    <TextView
        android:id="@+id/tv_wod_record"
        android:layout_marginTop="@dimen/item_item_margin_top_large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_content"
        android:text="@string/sample_record"
        app:layout_constraintTop_toBottomOf="@+id/tv_wod_title"
        tools:ignore="MissingConstraints,SpUsage"
        tools:visibility="visible" />



</androidx.constraintlayout.widget.ConstraintLayout>